Change Kafka bootstrap server to localhost

--- a/order-service.yml
+++ b/order-service.yml
@@ -10,7 +10,7 @@ spring:
         enabled: true
 
   kafka:
-    bootstrap-servers: kafka:9094
+    bootstrap-servers: localhost:9094
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
