Update Kafka and Eureka service URLs in config

--- a/product-service.yml
+++ b/product-service.yml
@@ -6,7 +6,7 @@ spring:
     name: product-service
   
   kafka:
-    bootstrap-servers: localhost:9094
+    bootstrap-servers: kafka:9094
     consumer:
       group-id: product-consumer-group
       auto-offset-reset: earliest
@@ -18,7 +18,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://discovery-server:8761/eureka
 
 management:
   tracing:
